// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3rd state 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={false}
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-5"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`controlled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-1"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`isDisabled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-4"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={true}
    id="check"
    type="checkbox"
  />
</label>
`;

exports[`passing HTML attribute 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    aria-labelledby="labelId"
    checked={true}
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-7"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    label="label"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`passing class 1`] = `
<label
  className="pf-c-dropdown__toggle-check class-123"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-6"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    label="label"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`uncontrolled 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-2"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={false}
    id="check"
    type="checkbox"
  />
</label>
`;

exports[`with text 1`] = `
<label
  className="pf-c-dropdown__toggle-check"
  htmlFor="check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    data-ouia-component-id="OUIA-Generated-DropdownToggleCheckbox-3"
    data-ouia-component-type="PF4/DropdownToggleCheckbox"
    data-ouia-safe={true}
    disabled={true}
    id="check"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="pf-c-dropdown__toggle-text"
    id="check-text"
  >
    Some text
  </span>
</label>
`;
